force-app/main/default/objects/KimbleOne__BusinessUnitIntercompanySummary__c/KimbleOne__BusinessUnitIntercompanySummary__c.object-meta.xml
<CustomObject>
    <label>Business Unit Intercompany Summary</label>
    <nameField>
        <label>Business Unit Intercompany Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Unit Intercompany Summary</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>