force-app/main/default/objects/KimbleOne__BusinessUnitIntercompanySummary__c/fields/KimbleOne__DemandBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DemandBusinessUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand Business Unit</label>
    <referenceTo>KimbleOne__BusinessUnit__c</referenceTo>
    <relationshipLabel>Business Unit Intercompany Summary</relationshipLabel>
    <relationshipName>BusinessUnitIntercompanySummaryDemandBU</relationshipName>
    <type>Lookup</type>
</CustomField>