force-app/main/default/objects/KimbleOne__BusinessUnitIntercompanySummary__c/fields/KimbleOne__IntInvCcyInvoiceableAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyInvoiceableAmount__c</fullName>
    <formula>KimbleOne__IntInvCcyExpensesInvoiceableAmount__c + KimbleOne__IntInvCcyServicesInvoiceableAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiceable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>