force-app/main/default/objects/KimbleOne__BusinessUnitIntercompanySummary__c/fields/KimbleOne__IntInvCcyServicesInvoiceableAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyServicesInvoiceableAmount__c</fullName>
    <label>Services Invoiceable Amount</label>
    <summarizedField>KimbleOne__DeliveryElementIntercompanySummary__c.KimbleOne__IntInvCcyServicesInvoiceableAmount__c</summarizedField>
    <summaryForeignKey>KimbleOne__DeliveryElementIntercompanySummary__c.KimbleOne__BusinessUnitIntercompanySummary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>