force-app/main/default/objects/KimbleOne__BusinessUnitIntercompanySummary__c/fields/KimbleOne__SupplyBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplyBusinessUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply Business Unit</label>
    <referenceTo>KimbleOne__BusinessUnit__c</referenceTo>
    <relationshipLabel>Business Unit Intercompany Summary (Supply Business Unit)</relationshipLabel>
    <relationshipName>BusinessUnitIntercompanySummarySupplyBU</relationshipName>
    <type>Lookup</type>
</CustomField>